--- a/CoreBase/CoreBase.csproj
+++ b/CoreBase/CoreBase.csproj
@@ -32,6 +32,10 @@
     <PackageReference Include="MSBuildTasks" Version="1.5.0.235" PrivateAssets="all" IncludeAssets="compile; native; contentfiles; analyzers; buildtransitive" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Include="..\Resources\Notifications\Notifications.Designer.cs" Link="Notifications\Notifications.Designer.cs" />
+  </ItemGroup>
+
   <Import Project="..\SharedCoreBase\SharedCoreBase.projitems" Label="Shared" />
 
   <ItemGroup Label="dotNet dependencies">
@@ -60,10 +64,10 @@
     <!-- Write AssemblyInfo -->
     <AssemblyInfo CodeLanguage="CS" OutputFile="Properties\AssemblyInfo.cs" AssemblyProduct="$(Product)" AssemblyTitle="$(Title)" AssemblyDescription="$(Description)" AssemblyCopyright="$(Copyright)" AssemblyVersion="$(Major).$(Minor).$(Revision).$(Build)" AssemblyFileVersion="$(Major).$(Minor).$(Revision).$(Build)" />
     <!-- CSharpCoreBase customization dll -->
-    <GenerateResource SdkToolsPath="$(TargetFrameworkSDKToolsDirectory)" UseSourcePath="true" Sources="$(SolutionDir)\Icon\CoreBase.resx" OutputResources="$(ProjectDir)\obj\Debug\CSharpCoreBaseImages.resources" References="$(SystemDrawingDllPath)" />
+    <GenerateResource SdkToolsPath="$(TargetFrameworkSDKToolsDirectory)" UseSourcePath="true" Sources="$(SolutionDir)\Resources\CoreBase.resx" OutputResources="$(ProjectDir)\obj\Debug\CSharpCoreBaseImages.resources" References="$(SystemDrawingDllPath)" />
     <AL SdkToolsPath="$(TargetFrameworkSDKToolsDirectory)" TargetType="library" EmbedResources="$(ProjectDir)\obj\Debug\CSharpCoreBaseImages.resources" OutputAssembly="$(OutDir)CSharpCoreBase.customization.dll" ProductName="$(Product)" Title="$(Title)" Description="$(Description)" Copyright="$(Copyright)" Version="$(Major).$(Minor).$(Revision).$(Build)" />
     <!-- Package customization dll - however, this does really not set default icons -->
-    <GenerateResource SdkToolsPath="$(TargetFrameworkSDKToolsDirectory)" UseSourcePath="true" Sources="$(SolutionDir)\Icon\Package.resx" OutputResources="$(ProjectDir)\obj\Debug\CSharpPackageImages.resources" References="$(SystemDrawingDllPath)" />
+    <GenerateResource SdkToolsPath="$(TargetFrameworkSDKToolsDirectory)" UseSourcePath="true" Sources="$(SolutionDir)\Resources\Package.resx" OutputResources="$(ProjectDir)\obj\Debug\CSharpPackageImages.resources" References="$(SystemDrawingDllPath)" />
     <AL SdkToolsPath="$(TargetFrameworkSDKToolsDirectory)" TargetType="library" EmbedResources="$(ProjectDir)\obj\Debug\CSharpPackageImages.resources" OutputAssembly="$(OutDir)Package.customization.dll" ProductName="$(Product)" Title="$(Title)" Description="$(Description)" Copyright="$(Copyright)" Version="$(Major).$(Minor).$(Revision).$(Build)" />
   </Target>
 
