--- a/RevitExtensible/RevitExtensible.csproj
+++ b/RevitExtensible/RevitExtensible.csproj
@@ -32,6 +32,10 @@
     <PackageReference Include="MSBuildTasks" Version="1.5.0.235" PrivateAssets="all" IncludeAssets="compile; native; contentfiles; analyzers; buildtransitive" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Include="..\Resources\Notifications\Notifications.Designer.cs" Link="Notifications\Notifications.Designer.cs" />
+  </ItemGroup>
+
   <Import Project="..\SharedCoreExtensible\SharedCoreExtensible.projitems" Label="Shared" />
   <Import Project="..\SharedRevitExtensible\SharedRevitExtensible.projitems" Label="Shared" />
 
@@ -97,7 +101,7 @@
     <!-- Write AssemblyInfo -->
     <AssemblyInfo CodeLanguage="CS" OutputFile="Properties\AssemblyInfo.cs" AssemblyProduct="$(Product)" AssemblyTitle="$(Title)" AssemblyDescription="$(Description)" AssemblyCopyright="$(Copyright)" AssemblyVersion="$(Major).$(Minor).$(Revision).$(Build)" AssemblyFileVersion="$(Major).$(Minor).$(Revision).$(Build)" />
     <!-- CSharpRevitExtensible customization dll -->
-    <GenerateResource SdkToolsPath="$(TargetFrameworkSDKToolsDirectory)" UseSourcePath="true" Sources="$(SolutionDir)\Icon\RevitExtensible.resx" OutputResources="$(ProjectDir)\obj\Debug\CSharpRevitExtensibleImages.resources" References="$(SystemDrawingDllPath)" />
+    <GenerateResource SdkToolsPath="$(TargetFrameworkSDKToolsDirectory)" UseSourcePath="true" Sources="$(SolutionDir)\Resources\RevitExtensible.resx" OutputResources="$(ProjectDir)\obj\Debug\CSharpRevitExtensibleImages.resources" References="$(SystemDrawingDllPath)" />
     <AL SdkToolsPath="$(TargetFrameworkSDKToolsDirectory)" TargetType="library" EmbedResources="$(ProjectDir)\obj\Debug\CSharpRevitExtensibleImages.resources" OutputAssembly="$(OutDir)CSharpRevitExtensible.customization.dll" ProductName="$(Product)" Title="$(Title)" Description="$(Description)" Copyright="$(Copyright)" Version="$(Major).$(Minor).$(Revision).$(Build)" />
   </Target>
 
